--- a/Xamarin101JM/Xamarin101JM/Xamarin101JM.Android/Xamarin101JM.Android.csproj
+++ b/Xamarin101JM/Xamarin101JM/Xamarin101JM.Android/Xamarin101JM.Android.csproj
@@ -65,6 +65,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Refractored.MvvmHelpers">
+      <Version>1.6.2</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2083" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
